Continued adding skeleton code to notification svc.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Tech Residents Chat Notification Service
+Tech Residents Notification Service
 
 Development environment:
 1) Make sure the following ports are installed:
